디렉토리 구조 변경 및 swagger 업데이트
